# opencv

docs_sphinx/: CMakeLists.txt  conf.py  conf.py.orig.bak
docs_sphinx/_static/: custom.css
docs_sphinx/_templates/: layout.html
docs_sphinx/conf_helpers/: __init__.py  build.py  examples.py  patches.py  postprocess.py  state.py  stubs.py  translate.py  xml_render.py
modules/core/src/: convert.dispatch.cpp
modules/dnn/: CMakeLists.txt
modules/dnn/include/opencv2/dnn/: all_layers.hpp  dnn.hpp  layer.hpp  layer_reg.private.hpp
modules/dnn/misc/js/: gen_dict.json
modules/dnn/misc/objc/: gen_dict.json
modules/dnn/mlas/: CMakeLists.txt  README.md  threading_opencv.cpp
modules/dnn/mlas/lib/: amx_common.h  cast.cpp  compute.cpp  convsym.cpp  kai_ukernel_interface.cpp  mlasi.h  platform.cpp  q4common.h  qgemm.cpp  qgemm_kernel_amx.cpp  qgemm_kernel_lsx.cpp  qgemm_kernel_neon.cpp  qgemm_kernel_sdot.cpp  qgemm_kernel_udot.cpp  sconv_nchwc_kernel_neon.cpp  threading.cpp
modules/dnn/mlas/lib/x86_64/: QgemmU8S8KernelAmxCommon.S  QgemmU8X8KernelAvx2.S
modules/dnn/src/: dnn_read.cpp  graph_fusion_attention.cpp  graph_fusion_basic.cpp  graph_fusion_patterns.cpp  graph_fusion_patterns.hpp  graph_fusion_qdq.cpp  graph_fusion_reshape_transpose.cpp  graph_fusion_scale_softmax.cpp  graph_fusion_shared_gemm.cpp  graph_fusion_transpose_matmul.cpp  init.cpp  layer.cpp  layer_data_wrapper.hpp  layer_factory.cpp  net.cpp  net_impl.cpp  net_impl.hpp  net_impl2.cpp  net_impl_backend.cpp  net_openvino.cpp  opdata_factory.hpp
modules/dnn/src/caffe/: caffe_importer.cpp  glog_emulator.hpp
modules/dnn/src/layers/: attention_layer.cpp  clip_layer.cpp  concat2_layer.cpp  conv2_common.cpp  conv2_common.hpp  conv2_layer.cpp  convolution_layer.cpp  flatten_layer.cpp  gemm_layer.cpp  gridsample_layer.cpp  matmul_layer.cpp  maxpool_layer.cpp  nary_eltwise_layers.cpp  nll_loss_layer.cpp  reduce2_layer.cpp  reduce2_layer.simd.hpp  reshape2_layer.cpp  slice2_layer.cpp  softmax_layer.cpp  squeeze_layer.cpp  transform_layout_layer.cpp  transpose_layer.cpp  unsqueeze_layer.cpp
modules/dnn/src/layers/cpu_kernels/: activation_kernels.simd.hpp  conv2_deconv.cpp  conv2_kernels.cpp  conv2_kernels.simd.hpp  fast_gemm.cpp  gridsample_kernels.simd.hpp  mlas_gemm.cpp  mlas_gemm.hpp  nary_eltwise_kernels.simd.hpp  softmax.cpp  transpose_kernels.simd.hpp
modules/dnn/src/onnx/: onnx_importer.cpp  onnx_importer2.cpp
modules/dnn/test/: imagenet_cls_test_alexnet.py  imagenet_cls_test_googlenet.py  imagenet_cls_test_inception.py  pascal_semsegm_test_fcn.py  test_backends.cpp  test_caffe_importer.cpp  test_darknet_importer.cpp  test_googlenet.cpp  test_ie_models.cpp  test_model.cpp  test_onnx_conformance.cpp  test_onnx_conformance_layer_filter__openvino.inl.hpp  test_onnx_conformance_layer_filter_opencv_classic_denylist.inl.hpp  test_onnx_conformance_layer_parser_denylist.inl.hpp  test_tf_importer.cpp
modules/videoio/src/: cap_ffmpeg_impl.hpp
samples/cpp/: hdr_merge_16u.cpp
samples/dnn/: models.yml  swin_test.cpp
